# Pancake

./: .gitattributes  .gitignore  CMakeLists.txt  readme.md
common/: logging.hpp
installer-win/: main.cpp
libraries/: CMakeLists.txt
project-stack/: CMakeLists.txt  arguments.cpp  arguments.hpp  image.cpp  image.hpp  main.cpp
